--- a/src/app/styles/components/table.less
+++ b/src/app/styles/components/table.less
@@ -23,6 +23,8 @@ app-cities-table {
     font-weight: normal;
     font-size: 14px;
     padding: 0 !important;
+    overflow: hidden;
+    text-overflow: clip;
   }
 
   [tuiTh] {
